--- a/config/config_train.yaml
+++ b/config/config_train.yaml
@@ -1,19 +1,31 @@
 # 训练数据
-train_csv: "D:/Codes/LineArtPred/data/csv/balanced_data4/train_dataset_balanced.csv"
+train_csv: "D:/Codes/LineArtPred/data/csv/balanced_data5/train_dataset_balanced.csv"
 val_csv: "D:/Codes/LineArtPred/data/csv/balanced_data4/val_dataset.csv"
 test_csv: "D:/Codes/LineArtPred/data/csv/balanced_data4/test_dataset.csv"
 image_dir: "D:/Codes/JigsawPrediction/data/images"
 
-# 训练参数
+# 训练模式
+incremental_training: true  # 是否增量训练
+
+# 训练参数（默认完整训练）
 batch_size: 32
 learning_rate: 5e-5
 num_epochs: 100
 patience: 3
-checkpoint_dir: "models/coca_vit_b_32/checkpoints6/"   # 模型保存路径
+checkpoint_dir: "models/base_model/checkpoints6/"  # 模型保存路径
 use_gpu: true
-num_classes: 4
+num_classes: 5
 
 use_features:
   use_full_image: true
   use_numeric_features: true
   use_text_hierarchy: true
+
+# 训练参数（增量训练）
+incremental_params:
+  batch_size: 2
+  learning_rate: 5e-6
+  patience: 2
+  checkpoint_dir: "models/partial_finetune_model/checkpoints2/"  # 增量训练模型保存路径
+
+incremental_model_path: "models/base_model/checkpoints2/best_model_epoch_1_num_classes_5.pth"
