--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 torch==2.2.0+cu121
 torchvision==0.17.0+cu121
-numpy==1.24.3
+numpy~=1.24.0
 pandas==2.2.3
 pyyaml==6.0.2
 open-clip-torch==2.28.0
 Pillow==10.4.0
+scikit-learn~=1.5.2
+tqdm~=4.66.5
